# myproj

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: conf.py  index.rst
